修复progressBar添加不上的问题

--- a/autobind/panel/index.css
+++ b/autobind/panel/index.css
@@ -17,10 +17,26 @@
     flex-wrap: nowrap;
 }
 .inputItem {
+    margin-left: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     flex-wrap: nowrap;
     
+}
+.con .colCon {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+.newRowCon {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
