--- a/autobind/panel/index.css
+++ b/autobind/panel/index.css
@@ -1,13 +1,30 @@
 :host { margin: 5px; }
     h2 { color: #f90; }
+.title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    font-weight: bolder;
+    color: #f90;
+    padding: 10px 10px 10px 10px;
+}
 .con {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+.explain {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+}
 .item {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
+    margin-left: 10px;
 }
 .con .rowCon {
     display: flex;
@@ -18,6 +35,7 @@
 }
 .inputItem {
     margin-left: 10px;
+    margin-bottom: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
